Rewrote some methods by choosing a more functional approach